name:                spline
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robrix/spline#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           Rob Rix
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SVG.Drawing
                     , SVG.Path
  build-depends:       base >= 4.7 && < 5
                     , linear
  default-language:    Haskell2010

executable spline-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spline
  default-language:    Haskell2010

test-suite spline-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spline
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/spline
